<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_goals"
        android:icon="@drawable/ic_goals"
        android:title="@string/nav_goals" />
    <item
        android:id="@+id/nav_insights"
        android:icon="@drawable/ic_insights"
        android:title="@string/nav_insights" />
    <item
        android:id="@+id/nav_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/nav_leaderboard" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>